解决 移动端  格式问题

--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,10 @@
             </h2>
             <ul>
                 <li>
-                    <p><a href="https://www.zhihu.com/people/hu-xue-10-28/posts" target="_blank">知乎</a><a href="https://www.yuque.com/xiaoxue0423" target="_blank">语雀</a> &nbsp;记录学习总结200余篇前端知识
+                    <p>
+                        <a href="https://www.zhihu.com/people/hu-xue-10-28/posts" target="_blank">知乎</a>
+                        <a href="https://www.yuque.com/xiaoxue0423" target="_blank">语雀</a> &nbsp;
+                        <span>记录学习总结 200 余篇前端知识</span>
                     </p>
                 </li>
                 <li>
