完善 技能   部分

--- a/src/index.html
+++ b/src/index.html
@@ -46,15 +46,14 @@
             <div class="wrapper">
                 <div id="skills"></div>
                 <ul>
-                    <li>熟悉HTML、CSS、JavaScript等语言，进行可读性高的W3C规范代码编程</li>
-                    <li>熟悉HTML5、CSS3新特性、<strong>新特性</strong>，并进行<strong>响应式开发</strong></li>
-                    <li>熟悉页面制作技巧，熟悉传统布局、<strong>Flex布局</strong>、Grid布局、移动端适配等</li>
+                    <li>熟悉各种Web前端核心技术，包括HTML(5)、CSS(3)、JavaScript等语言，进行可读性高的W3C规范代码编程，并有相关的<strong>项目开发经验或成果</strong></li>
+                    <li>熟悉页面制作技巧，熟悉传统布局、<strong>Flex布局</strong>、Grid布局、移动端适配等，并进行<strong>响应式开发</strong></li>
                     <li>
-                        熟悉<strong>前后端分离</strong>技术，包括 AJAX、跨域、前端路由、Cookie、Session 等
+                        熟悉<strong>前后端分离</strong>技术，包括 <strong>跨域</strong>、前端路由、Cookie、Session 等
                     </li>
                     <li>熟悉<strong>jQuery</strong>、<strong>Bootstrap</strong>框架的使用，并有过相关实际开发经验</li>
                     <li>
-                        熟练掌握Vue全家桶的使用，包括<strong>Vue-cli、VueRouter、Vuex</strong>及相关流行库的使用，理解其重要概念
+                        熟练掌握<strong>全家桶</strong>的使用，包括<strong>Vue-cli、VueRouter、Vuex</strong>及相关流行库的使用，理解框架思想
                     </li>
                     <!--        <li>-->
                     <!--          熟练掌握 React全家桶的使用，包括-->
@@ -63,12 +62,13 @@
                     <li>熟悉可视化工具<strong>echarts</strong></li>
                     <li>了解<strong>TypeScript</strong>，了解<strong>node.js</strong>等</li>
                     <li>
-                        熟悉 <strong>git</strong> 的使用，了解前端构建工具<strong>Webpack</strong> 的配置和优化
+                        熟练使用<strong>git</strong>版本管理工具，了解前端构建工具<strong>Webpack</strong> 的配置和优化
                     </li>
                     
                     <li>熟悉计算机网络，了解<strong>TCP/IP</strong>、<strong>HTTP</strong></li>
-                    <li>了解计算机操作系统基本原理，数据结构基础算法</li>
-                    <li>性格开朗，学习及语言表达能力强，善于与人沟通、交流。</li>
+                    <li>了解计算机操作系统基本原理，对常见算法、数据结构有一定了解</li>
+                    <li>性格开朗，学习及语言表达能力强，善于与人沟通、交流</li>
+                    <li>热爱<strong>前端开发</strong>，乐于持续学习和跳挑战新技术</li>
                 </ul>
             </div>
         </section>
@@ -92,8 +92,8 @@
                         <h3>需求管理系统</h3>
                     </header>
                     <p>
-                        由于公司内部工作上的需求  都是通过邮件和电话来交接的，每天都要接受很多的邮件，非常繁琐、低效。<br/>
-                        所以部门领导要求开发一个需求系统以供公司内部人员使用，可以在此系统上发布需求任务给相关开发部门处理。
+                        由于公司内部工作上的需求  都是通过邮件和电话来交接的，每天都要接受很多的邮件，非常繁琐、低效<br/>
+                        所以部门领导要求开发一个需求系统以供公司内部人员使用，可以在此系统上发布需求任务给相关开发部门处理
                     </p>
                     <p>由我<strong>独立设计与开发</strong>前端部分，基于Vue2、VueRouter、Vuex、JS、CSS3、HTML5等</p>
                 </li>
@@ -136,11 +136,11 @@
                         </span>
                     </header>
                     <p>
-                        天天记账是一款极简的<strong>记账应用</strong>，也是一款基于Vue2、VueRouter、Vuex、TypeScript的单页面应用。
+                        天天记账是一款极简的<strong>记账应用</strong>，也是一款基于Vue2、VueRouter、Vuex、TypeScript的单页面应用
                         <br/>
-                        由本人独立设计及实现，期间遇到了很多Webpack和Typescript方面的问题和Typescript、Vue2.0结合不友好出现的等等问题。
+                        由本人独立设计及实现，期间遇到了很多Webpack和Typescript方面的问题和Typescript、Vue2.0结合不友好出现的等等问题
                         <br/>
-                        源代码几乎完全用Typescript实现，用到了<strong>装饰器语法</strong>，类语法，is关键字，赋值断言。
+                        源代码几乎完全用Typescript实现，用到了<strong>装饰器语法</strong>，类语法，is关键字，赋值断言
                     </p>
                 
                 </li>
