--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,8 @@
                 
                 </li>
 
+                <p class="page2"></p>
+
                 <li>
                     <header>
                         <h3>哒哒导航</h3>
@@ -243,6 +245,7 @@
             <p>相关课程：数据结构、算法分析与设计、计算机网络原理、操作系统原理、数据库原理、<strong>前端开发技术</strong>、C语言、Java程序设计、Linux应用等课程</p>
         </section>
         <p class="page2"></p>
+
         <section class="award">
             <h2 style="color:black">
                 荣誉奖项
@@ -285,6 +288,7 @@
                     <p>
                         <a href="https://github.com/xiaoxue423" target="_blank">我的 GitHub</a>，
                         <a href="https://gitee.com/xiaoxue0423" target="_blank">我的 Gitee</a>
+                        <a href="https://www.npmjs.com/settings/xiaoxue0423/packages">我的npm包</a>
                         <span> 过去几个月共有 200 多 次提交</span>
                     </p>
                 </li>
