--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
                     <!--        </li>-->
                     <li>熟悉可视化工具<strong>echarts</strong></li>
                     <li>了解<strong>TypeScript</strong>，了解<strong>node.js</strong>等</li>
+                    <li>在实际项目中使用过less、sass、scss等CSS预编译语言</li>
                     <li>
                         熟练使用<strong>git</strong>版本管理工具，了解前端构建工具<strong>Webpack</strong> 的配置和优化
                     </li>
@@ -288,7 +289,7 @@
                     <p>
                         <a href="https://github.com/xiaoxue423" target="_blank">我的 GitHub</a>，
                         <a href="https://gitee.com/xiaoxue0423" target="_blank">我的 Gitee</a>
-                        <a href="https://www.npmjs.com/settings/xiaoxue0423/packages">我的npm包</a>
+                        <a href="https://www.npmjs.com/settings/xiaoxue0423/packages" target="_blank">我的npm包</a>
                         <span> 过去几个月共有 200 多 次提交</span>
                     </p>
                 </li>
